fix: improve some known scrollbar incompatibility

--- a/src/assets/themes/default/root.less
+++ b/src/assets/themes/default/root.less
@@ -28,22 +28,37 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: normal;
 }
 
-::-webkit-scrollbar:hover {
-  -webkit-user-drag: none;
+/**
+ * scrollbar
+*/
+::-webkit-resizer, ::-webkit-scrollbar-corner {
+  display: none;
 }
-
-::-webkit-scrollbar-thumb:hover {
-  margin-top: 40px;
+::-webkit-scrollbar {
+  width: 4px;
+  height: 0;
+  border-radius: 4px;
+  background-color: transparent;
 }
-
-::-webkit-scrollbar-track {
-  margin-top: 40px;
+::-webkit-scroll-track, ::-webkit-scrollbar-button {
+  display: none;
+}
+::-webkit-resizer, ::-webkit-scrollbar-corner {
+  display: none;
+}
+::-webkit-scrollbar-thumb {
+  background-color: #b6b5b5;
+  opacity: .7;
+  border-radius: 4px;
+}
+::-webkit-scrollbar-track-piece {
+  display: none;
 }
 
 /**
  * sweet alert
  * customed style
-**/
+ */
 .swal-button--confirm {
   background-color: fade(@background-btn-highlight, 70%);
   &:hover:not([disabled]) {
